# sudoku

./: LICENSE  Sudoku.cabal
app/: Game.txt  Main.hs
