cabal-version:      2.4
name:               Sudoku
version:            0.1.0.0
synopsis:           The Sudoku game 

-- A longer description of the package.
-- description:
homepage:           https://mpaviotti.github.com

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Marco Paviotti
maintainer:         marco.paviotti@gmail.com

-- A copyright notice.
-- copyright:
category:           Game
extra-source-files: CHANGELOG.md

executable Sudoku
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.0.0, array, containers, listsafe
    hs-source-dirs:   app
    default-language: Haskell2010
